--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
@@ -20,7 +23,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
 }
 
