--- a/gradle.properties
+++ b/gradle.properties
@@ -20,11 +20,11 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-systemProp.http.proxyPassword=LfhrCjekc3!
-systemProp.http.proxyHost=s-tmg.kamaz.org
-systemProp.https.proxyPort=8080
-systemProp.https.proxyUser=MiftakhovIS
-systemProp.https.proxyHost=s-tmg.kamaz.org
-systemProp.https.proxyPassword=LfhrCjekc3!
-systemProp.http.proxyPort=8080
-systemProp.http.proxyUser=MiftakhovIS
+#systemProp.http.proxyPassword=LfhrCjekc3!
+#systemProp.http.proxyHost=s-tmg.kamaz.org
+#systemProp.https.proxyPort=8080
+#systemProp.https.proxyUser=MiftakhovIS
+#systemProp.https.proxyHost=s-tmg.kamaz.org
+#systemProp.https.proxyPassword=LfhrCjekc3!
+#systemProp.http.proxyPort=8080
+#systemProp.http.proxyUser=MiftakhovIS
